--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-tailwind/react": "^1.4.2",
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
     "daisyui": "^2.51.3",
