--- a/package.json
+++ b/package.json
@@ -9,6 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/cache": "11.6.0",
+    "@emotion/react": "11.7.0",
+    "@emotion/server": "11.4.0",
+    "@emotion/styled": "11.6.0",
+    "@mui/lab": "^5.0.0-alpha.65",
+    "@mui/material": "^5.11.15",
+    "apexcharts": "^3.23.1",
+    "clsx": "1.1.1",
+    "prop-types": "15.7.2",
+    "react-apexcharts": "^1.3.7",
+    "feather-icons-react": "^0.5.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
