--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@material-tailwind/react": "^1.4.2",
+    "@mui/icons-material": "^5.11.11",
     "@mui/joy": "^5.0.0-alpha.73",
     "@mui/lab": "^5.0.0-alpha.65",
     "@mui/material": "^5.11.15",
