--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "18.2.0",
     "react-apexcharts": "^1.3.7",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-redux": "^8.0.5",
     "yarn": "^1.22.19"
   },
