--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "react-apexcharts": "^1.3.7",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.8.0",
+    "react-photo-gallery": "^8.0.0",
     "react-redux": "^8.0.5",
     "yarn": "^1.22.19"
   },
