--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mui/joy": "^5.0.0-alpha.73",
     "@mui/lab": "^5.0.0-alpha.65",
     "@mui/material": "^5.11.15",
+    "@react-pdf/renderer": "^3.1.9",
     "@reduxjs/toolkit": "^1.9.3",
     "apexcharts": "^3.23.1",
     "axios": "^1.3.5",
@@ -40,6 +41,7 @@
     "react-icons": "^4.8.0",
     "react-photo-gallery": "^8.0.0",
     "react-redux": "^8.0.5",
+    "react-to-print": "^2.14.12",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
