--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "feather-icons-react": "^0.5.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.28",
     "next": "13.2.3",
     "prop-types": "15.7.2",
     "react": "18.2.0",
