--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react": "18.2.0",
     "react-apexcharts": "^1.3.7",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.44.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
     "react-pdf": "^6.2.2",
