--- a/package.json
+++ b/package.json
@@ -27,15 +27,19 @@
     "@reduxjs/toolkit": "^1.9.3",
     "apexcharts": "^3.23.1",
     "axios": "^1.3.5",
+    "base-64": "^1.0.0",
     "clsx": "1.1.1",
     "daisyui": "^2.51.3",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "feather-icons-react": "^0.5.0",
+    "file-loader": "^6.2.0",
     "firebase": "^9.22.2",
+    "install": "^0.13.0",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.28",
     "next": "13.2.3",
+    "pdfmake": "^0.2.9",
     "prop-types": "15.7.2",
     "react": "18.2.0",
     "react-apexcharts": "^1.3.7",
